<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/transparent_black"
    android:gravity="center"
   android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:id="@+id/car_number_dialog_main_layout"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/something_missing_dialog_custom_background"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_number_dialog"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@string/font_family_condensed"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:text="@string/car_number_dialog_plate"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:hint="@string/car_number_dialog_hint_plate"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:id="@+id/activity_car_dialog_car_plate"
            android:background="@drawable/activity_edit_profile_custom_edit_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/transparent_black"
            android:fontFamily="sans-serif-condensed"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/car_number_dialog_plate_remark"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_model_dialog_upload"
            android:background="@drawable/activity_login_custom_button"
            android:fontFamily="@string/font_family_condensed"
            android:id="@+id/activity_car_number_upload"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
