<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/activity_register_main_layout"
    tools:context=".registration.registration.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="45sp"
            android:fontFamily="@string/cursive"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_editext_username"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="10dp"
                android:fontFamily="@string/font_family_condensed"
                android:id="@+id/activity_register_username"
                android:background="@drawable/activity_login_custom_edit_text"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_hint_email"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"
                android:fontFamily="@string/font_family_condensed"
                android:id="@+id/activity_register_email"
                android:layout_marginTop="15dp"
                android:background="@drawable/activity_login_custom_edit_text"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_hint_password"
                android:textColorHint="@color/white"
                android:fontFamily="@string/font_family_condensed"
                android:inputType="textPassword"
                android:id="@+id/activity_register_password"
                android:padding="10dp"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:background="@drawable/activity_login_custom_edit_text"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_editext_phone_prefix"
                    android:textColorHint="@color/white"
                    android:gravity="center"
                    android:fontFamily="@string/font_family_condensed"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:enabled="false"
                    android:layout_marginTop="15dp"
                    android:maxLines="1"
                    android:background="@drawable/activity_login_custom_edit_text"
                    android:textColor="@color/white"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_editext_mobile"
                    android:textColorHint="@color/white"
                    android:fontFamily="@string/font_family_condensed"
                    android:inputType="phone"
                    android:id="@+id/activity_register_mobile"
                    android:padding="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/activity_login_custom_edit_text"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_register_editext_male"
                    android:textColorHint="@color/white"
                    android:fontFamily="@string/font_family_condensed"
                    android:id="@+id/activity_register_male"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/activity_login_custom_edit_text"
                    android:textColor="@color/tranparent_white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_register_editext_female"
                    android:id="@+id/activity_register_female"
                    android:textColorHint="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@string/font_family_condensed"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/activity_login_custom_edit_text"
                    android:textColor="@color/tranparent_white"/>

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/activity_login_custom_button"
                android:text="@string/activity_register_sign_up_button"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="checkingInput"
                android:id="@+id/activity_register_sign_up"
                android:fontFamily="@string/font_family_condensed"
                android:layout_marginTop="?actionBarSize"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>