<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/transparent_black"
    android:gravity="center"
    android:padding="20dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/something_missing_dialog_custom_background"
        android:paddingTop="10dp"
        android:padding="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_route_dialog_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@string/font_family_condensed"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/completed_route_dialog_label"
            android:fontFamily="@string/font_family_condensed"
            android:textColor="@color/grey"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_route_dialog_button"
            android:background="@drawable/activity_login_custom_button"
            android:fontFamily="@string/font_family_condensed"
            android:id="@+id/completed_route_dialog_start_button"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
